@@ -1,3 +1,12 @@
+2005-02-06    <tino@firebird.03.softkill.net>
+
+	* getopt.h (tino_getopt): -- is made ARG in certain situations
+
+2005-01-27    <tino@firebird.03.softkill.net>
+
+	* getopt.h (tino_getopt): DD otion added
+	(main): integer now active in unit_test
+
 2005-01-26    <tino@firebird.03.softkill.net>
 
 	* xd.h (main, xd): added
